# team-plan

./: .dockerignore  Cargo.toml  Dockerfile  mimo.db-shm  mimo.db-wal
src/: db.rs  holiday.rs  main.rs
static/: app.js  index.html  style.css
